Release procedure